# MenSung

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MEDICAL_DATA_POLICY.md  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  medical_data_error.yml  security_report.yml
.github/workflows/: build-release.yml  ci.yml  release.yml
crates/mensung-builder/: Cargo.toml
crates/mensung-builder/src/: atc.rs  atc_download.rs  claims.rs  ddinter.rs  download.rs  error.rs  lib.rs  main.rs  openfda.rs  openfda_download.rs  pubchem.rs  pubchem_download.rs  report.rs  retry.rs  rxnorm.rs  rxnorm_download.rs  seed.rs  validate.rs  writer.rs
crates/mensung-builder/tests/: atc_live.rs  ddinter_v2_size.rs  golden_cases.rs  openfda_live.rs  pubchem_live.rs  rxnorm_live.rs
crates/mensung-client/: Cargo.toml  build.rs
crates/mensung-client/src/: cli.rs  data.rs  dataset_download.rs  main.rs  style.rs  update.rs
crates/mensung-client/src/tui/: app.rs  mod.rs  ui.rs
crates/mensung-client/tests/: drug_info_cli.rs  multi_claim_display.rs  version_and_update.rs
crates/mensung-core/: Cargo.toml
crates/mensung-core/src/: candidate.rs  error.rs  fuzzy.rs  interaction.rs  lib.rs  lookup.rs
crates/mensung-db/: Cargo.toml
crates/mensung-db/src/: atc_table.rs  bytes.rs  claim_record.rs  database.rs  drug_fact.rs  drug_fact_index.rs  drug_table.rs  error.rs  header.rs  interaction_index.rs  interaction_record.rs  layout.rs  lib.rs  test_support.rs
crates/mensung-domain/: Cargo.toml
crates/mensung-domain/src/: atc_code.rs  claim.rs  claim_date.rs  confidence.rs  drug.rs  drug_fact.rs  error.rs  evidence.rs  ids.rs  inn_name.rs  interaction.rs  interaction_fact.rs  lib.rs  pubchem.rs  rxcui.rs  severity.rs  source.rs
docs/: DATABASE_FORMAT.md
docs/demos/: alt-i.tape  warfarin.tape
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_men.rs
tests/: README.md  golden_cases.json
