[workspace]
resolver = "2"
members = [
    "crates/mensung-domain",
    "crates/mensung-core",
    "crates/mensung-db",
    "crates/mensung-builder",
    "crates/mensung-client",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Mathéo Delbarre"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Etoile-Bleu/MenSung"
homepage = "https://github.com/Etoile-Bleu/MenSung"
description = "Offline medication interaction checker for humanitarian medical workers"
keywords = ["medical", "offline", "healthcare", "drug-interactions", "humanitarian"]
categories = ["command-line-utilities", "science"]
# These five crates are workspace-internal only, never published to
# crates.io independently of each other or of a MenSung release; this
# also lets cargo-deny's allow-wildcard-paths treat their path
# dependencies on each other as safe rather than flagging them as
# wildcard dependencies (see deny.toml).
publish = false

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
crc32fast = "1.4"
strsim = "0.11"
ratatui = "0.30"
crossterm = "0.29"
csv = "1.4"
ureq = "3.3"
percent-encoding = "2.3"

# Small, fast binaries on old hardware: full LTO, single codegen unit, no
# unwinding tables, stripped symbols. Startup and lookup latency targets
# (<100ms startup, <5ms lookup) matter more here than compile time.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
