[package]
name = "mensung-db-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mensung-db]
path = ".."

[[bin]]
name = "parse_men"
path = "fuzz_targets/parse_men.rs"
test = false
doc = false
bench = false

[workspace]
