[package]
name = "mensung-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenFDA/RxNorm/WHO importers, parser, and .men database compiler."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mensung-domain = { version = "0.1.0", path = "../mensung-domain" }
mensung-db = { version = "0.1.0", path = "../mensung-db" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
crc32fast.workspace = true
