[package]
name = "mensung-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DDInter importer and downloader, parser, and .men database compiler."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mensung-domain = { path = "../mensung-domain" }
mensung-db = { path = "../mensung-db" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
crc32fast.workspace = true
csv.workspace = true
ureq.workspace = true
percent-encoding.workspace = true
