[package]
name = "mensung-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lookup engine, fuzzy matcher, and business rules built on mensung-domain."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mensung-domain = { version = "0.1.0", path = "../mensung-domain" }
mensung-db = { version = "0.1.0", path = "../mensung-db" }
thiserror.workspace = true
strsim.workspace = true

[dev-dependencies]
mensung-db = { version = "0.1.0", path = "../mensung-db", features = ["test-support"] }
