[package]
name = "mensung-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Binary .men database reader: zero-copy access and checksum validation."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mensung-domain = { version = "0.1.0", path = "../mensung-domain" }
thiserror.workspace = true
sha2.workspace = true
crc32fast.workspace = true
