[package]
name = "mensung-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Drug entities, interaction models, severity rules, and validation logic. No I/O, no UI."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
